2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-02-08  Cedric BAIL

	* Fix invalid memory access by edje alias code.

2011-02-10  Cedric BAIL

	* Fix use of recursive alias.

2011-02-10  Cedric BAIL

	* Fix propagation of recursive events on existing part.

2011-02-24  Cedric BAIL

	* fix signal comming from box/table item to include their
	index or name correctly.

2011-03-10  WooHyun Jung

        * Fix: Emit clicked signal on entry if still in - missing.

2011-05-11  Tom Hacohen

	* text: fix ellipsis causing text to not draw in some cases.

2011-05-23  Cedric Bail

	1.0.1 release

2011-06-11  Tom Hacohen (TAsn)

	* Fix an issue with ellipsis not working properly with small
	  text parts.
